@@ -48,6 +48,7 @@ Verilator 5.023 devel
 * Fix inout ports of unpacked struct type (#5000). [Ryszard Rozak, Antmicro Ltd.]
 * Fix `unique {}` constraints missing semicolon (#5001)
 * Fix preprocessor to respect strings in joins (#5007)
+* Fix internal error on missing pattern key (#5023)
 
 
 Verilator 5.022 2024-02-24
